- Enemies as per 4th edition rules now need to be enabled through the House Rules tab in character settings. Settings for the amount of karma gained from enemies are now clearly delineated and grouped together in the House Rules tab. Fixes #1325.
- Favorite characters are now always automatically sorted alphabetically by their file paths. Fixes #3853.

Data Changes:
- Consolidated all German Data Changes custom data and all German-exclusive content of sourcebooks printed in English into a single German Data Changes c.ustom data folder.
- Individualized Alchemy, Disenchanting, Power, and Spellcasting focuses now properly apply their bonuses. Existing characters with these focuses will need to re-add them or reapply improvements to see any changes. Fixes #4340.
- Whisper of Bones now properly requires Necromancy.
- Injection Darts no longer display a weapon category selection screen and then crash Chummer. Fixes #4352.
- Smartlink from the Shadowrun 2050 ruleset now properly gives a +2 dicepool bonus when using smartguns.
- When creating spirit critters with forces not divisible by 3, the number of optional powers they get is now properly based on rounding the result of the division down instead of up. Fixes #4356.
- All spirits now properly have a starting and maximum Essence equal to their Force instead of to 6. Fixes #4358.
- Extraplanar Travelers is now a full category of selectable critters. Fixes #4394.
- Changed Imbue Item spell from SG to properly require being an adept, mystic adept or having the Advanced Ritual Casting art.
- Off-Road Tires properly cost 400 Nuyen per tire and have an availability of 6.
- Added the Grimmes Erwachen German splatbook and the Storyteller tradition statted in it.
- Fixed page reference for the Extra Fragile critter power. Closes #4420